# quantum-starter-lab

./: .PHONY  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  repo_structure.md  run_test.py
.github/workflows/: release.yml
examples/: bell_notebook.ipynb  dj_vs_balanced.ipynb
src/quantum_starter_lab/: __init__.py  api.py  cli.py  explain.py  init.py  plotting.py  results.py
src/quantum_starter_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quantum_starter_lab/demos/: bell.py  bv.py  dj.py  grover.py  teleportation.py
src/quantum_starter_lab/ir/: __init__.py  ascii.py  circuit.py
src/quantum_starter_lab/noise/: cirq_noise.py  qiskit_noise.py  spec.py
src/quantum_starter_lab/runners/: __init__.py  base.py  cirq_runner.py  qiskit_runner.py
src/quantum_starter_lab/utils/: __init__.py  bitstrings.py  hist.py  rng.py
tests/: conftest.py  test_bell.py  test_dj_bv_grover.py  test_endianness.py  test_noise.py  test_plotting.py  test_teleportation.py
